@@ -282,7 +282,7 @@ extern "C" {
 #if (NTDDI_VERSION >= 0x06000100) /* NTDDI_VISTASP1 */
     PIP_ADAPTER_DNS_SUFFIX FirstDnsSuffix;
 #endif
-  } IP_ADAPTER_ADDRESSES_LH;
+  } IP_ADAPTER_ADDRESSES_LH, *PIP_ADAPTER_ADDRESSES_LH;
 
   typedef struct _IP_ADAPTER_ADDRESSES_XP {
     __C89_NAMELESS union {
